# rm_utils

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: publish.yml
rimutil/: __init__.py  _lovely.py  config.py  dl.py  log.py  timer.py
scripts/: publish.sh
tests/: test_config.py  test_log.py  test_lovely.py  test_timer.py
